--- a/core/src/main/resources/application.yml
+++ b/core/src/main/resources/application.yml
@@ -14,10 +14,10 @@ spring:
   jpa:
     open-in-view: false
     hibernate:
-      ddl-auto: validate
+      ddl-auto: create-drop
     show-sql: false
   flyway:
-    enabled: true
+    enabled: false
     url: ${SPRING_DATASOURCE_URL}
     user: ${SPRING_DATASOURCE_USERNAME}
     password: ${SPRING_DATASOURCE_PASSWORD}
